fixed bugs nr 5,6,7,8 from Slack List